Update KeyProviderService.java